fixed massive horizontal scroll

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -2,7 +2,7 @@ $darkColor:#250D45;
 
 * { box-sizing: border-box; }
 
-body { font-family: Georgia, Times, "Times New Roman", serif;}
+body { font-family: Georgia, Times, "Times New Roman", serif; overflow:hidden;}
 
 a {
   text-decoration: none;
